[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["João Peixoto <joaopeixotooficial@gmail.com>"]
keywords = ["bao", "api", "parser"]
description = "Bao API"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
libc = ">=0.2.95"
vmm-sys-util = "0.12.1"
vhost-user-frontend = { git = "https://github.com/joaopeixoto13/vhost", branch = "vhost-user-frontend-v0.12.0" }
event-manager = { version = "0.4.0", features = ["remote_endpoint"] }
aarch64-cpu = "9.4.0"
vm-memory = { version = "0.15.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
once_cell = "1.19.0"